--- a/package.json
+++ b/package.json
@@ -18,10 +18,20 @@
   "homepage": "https://github.com/truerenton/threejs_demo",
   "dependencies": {
     "jquery": "^2.1.4",
+    "microjungle": "^1.0.0",
     "pubsub-js": "^1.5.3",
     "three": "^0.73.0",
+    "three-loaders-collada": "^1.0.1",
     "three-orbit-controls": "^71.1.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
+  },
+  "devDependencies": {
+    "css-loader": "^0.21.0",
+    "extract-text-webpack-plugin": "^0.9.0",
+    "file-loader": "^0.8.4",
+    "style-loader": "^0.13.0",
+    "stylus-loader": "^1.4.2",
+    "url-loader": "^0.5.6"
   }
 }
