--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "demo",
   "main": "js/app.js",
   "scripts": {
-    "server": "webpack-dev-server ----content-base ./"
+    "start": "node ./core/app",
+    "build": "webpack --watch --colors --progress"
   },
   "repository": {
     "type": "git",
@@ -17,16 +18,21 @@
   },
   "homepage": "https://github.com/truerenton/threejs_demo",
   "dependencies": {
+    "bemtmpl": "0.0.2",
+    "express": "^4.13.3",
     "jquery": "^2.1.4",
-    "microjungle": "^1.0.0",
+    "jquery-bem": "git+http://github.com/truerenton/jquery-bem#v1.3.1",
     "pubsub-js": "^1.5.3",
+    "serve-static": "^1.10.0",
+    "socket.io": "^1.3.7",
+    "socket.io-client": "^1.3.7",
     "three": "^0.73.0",
     "three-loaders-collada": "^1.0.1",
-    "three-orbit-controls": "^71.1.0",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "three-orbit-controls": "^71.1.0"
   },
   "devDependencies": {
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1",
     "css-loader": "^0.21.0",
     "extract-text-webpack-plugin": "^0.9.0",
     "file-loader": "^0.8.4",
